Allow grid groups to contain other grid groups, to fix mail compose window and other <listbox> bustage.  b=317480